--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "5.5",
     "mongoose": "^7.3.4"
   }
